--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url("https://media-front.elmostrador.cl/2021/11/file-20211112-15043-xoxxmg.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  text-align: center;
+  justify-content: center;
 }
 
 code {
