--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,5 +1,115 @@
+.content{
+    position: relative;
+    width: 300px;
+    height: 200px;
+    
+}
+.div{
+    position: relative;
+    margin-top: 20px;
+    
+}
+
+.content div{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backface-visibility: hidden;
+    transition: 1s;
+    margin-top: 10px;
+}
+
+.content .front{
+    display: flex;
+    position: absolute;
+    bottom: 20px;
+    width: 260px;
+    height: 190px;
+    left: 35px;
+    background: linear-gradient(to
+    top, rgba(100, 43, 2, 0.871) 0%, rgba(100, 43, 2, 0.871) 50%, rgba(100, 43, 2, 0.871) 50%, rgba(100, 43, 2, 0.871) 100%
+    );
+    border-radius: 10px;
+    border: 1px solid black;
+    transform: perspective(500px) rotateY(0deg);
+    box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
+}
+.content .back{
+    display: flex;
+    position: absolute;
+    bottom: 20px;
+    width: 260px;
+    height: 190px;
+    left: 35px;
+    background: linear-gradient(to
+    top, rgb(100, 43, 2) 0%, rgb(100, 43, 2) 50%, rgb(100, 43, 2) 50%, rgb(100, 43, 2) 100%
+    );
+    border-radius: 10px;
+    border: 1px solid black;
+    transform: perspective(500px) rotateY(180deg);
+    box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
+}
+
+.content:hover .front{
+    transform: perspective(500px) rotateY(180deg);
+}
+.content:hover .back{
+    transform: perspective(500px) rotateY(360deg);
+}
+
+.types{
+    display: flex;
+    position: relative;
+    font-size: 8px;
+    top: 45px;
+    margin: 5px;
+    color: #ffffff;
+    justify-content: center;
+    align-items: center;
+}
+
+.name{
+    display: flex;
+    position: absolute;
+    font-size: 10px;
+    bottom: 59%;
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+.titulo{
+    display: flex;
+    position: absolute;
+    font-size: 20px;
+    bottom: 75%;
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+.diet{
+    display: flex;
+    position: absolute;
+    font-size: 20px;
+    bottom: 30%;
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+
 .image{
     display: flex;
     position: relative;
-    width: 200px;
+    width: 103%;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+.link{
+    text-decoration: none;
 }
