--- a/client/src/views/LandingPage/LandingPage.module.css
+++ b/client/src/views/LandingPage/LandingPage.module.css
@@ -1,15 +1,17 @@
 .div{
     display: flex;
     position: absolute;
-    background-color: rgba(93, 42, 1, 0.628);
+    background-color: rgba(132, 64, 9, 0.588);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(20px);
     border: 1px solid black;
     border-radius: 10px;
     justify-content: center;
     align-items: center;
-    width: 350px;
-    height: 200px;
+    width: 450px;
+    height: 300px;
     left: 30%;
-    top: 150px;
+    top: 100px;
     box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
 }
 
@@ -19,21 +21,25 @@
     bottom: 70%;
     font-family: Heavitas;
     color: rgb(255, 255, 255);
+    text-shadow: 1px 1px rgb(5, 5, 5), -1px -1px rgb(0, 0, 0), 1px -1px rgb(0, 0, 0), -1px 1px rgb(0, 0, 0);
 }
 .p{
     display: flex;
     position: absolute;
     bottom: 30%;
-    font-size: 12px;
+    font-size: 15px;
     font-family: Heavitas;
     color: rgb(255, 255, 255);
+    text-shadow: 1px 1px rgb(5, 5, 5), -1px -1px rgb(0, 0, 0), 1px -1px rgb(0, 0, 0), -1px 1px rgb(0, 0, 0);
 }
 .bien{
     display: flex;
     position: absolute;
-    bottom: 55%;
+    bottom: 53%;
     font-family: Heavitas;
+    font-size: 30px;
     color: rgb(255, 255, 255);
+    text-shadow: 1px 1px rgb(5, 5, 5), -1px -1px rgb(0, 0, 0), 1px -1px rgb(0, 0, 0), -1px 1px rgb(0, 0, 0);
 }
 .boton{
     display: flex;
@@ -41,11 +47,11 @@
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.891);
     color: rgb(40, 150, 7);
-    font-size: 15px;
+    font-size: 20px;
     font-family: Insaniburger;
     outline: none;
     border: 1px solid black;
-    top: 75px;
+    top: 115px;
 }
 
 .link  button:hover{
