--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -3,11 +3,34 @@
     position: relative;
     justify-content: space-around;
     align-items: center;
-    margin: 10px;
+    margin: 0px;
     background: rgba(106, 46, 1, 0.742);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(20px);
     height: 50px;
-    border-radius: 5px;
     box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.389);
+}
+.image{
+    display: flex;
+    position: relative;
+    width: 100px;
+
+}
+
+.boton{
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: rgb(48, 218, 5);
+    color: white;
+}
+
+.div button:hover{
+    background-color: #fffffffa;
+    color: rgb(40, 192, 10);
+}
+
+.div button:active{
+    background-color: rgb(189, 23, 15);
+    color: azure;
 }
