--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,64 +1,34 @@
-.content{
-    position: relative;
-    width: 300px;
-    height: 200px;
-    
-}
 .div{
-    position: relative;
-    margin-top: 20px;
-    
-}
-
-.content div{
-    position: relative;
-    width: 100%;
-    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    backface-visibility: hidden;
-    transition: 1s;
-    margin-top: 10px;
-}
-
-.content .front{
-    display: flex;
-    position: absolute;
-    bottom: 20px;
-    width: 260px;
-    height: 190px;
-    left: 35px;
+    position: relative;
     background: linear-gradient(to
     top, rgba(100, 43, 2, 0.871) 0%, rgba(100, 43, 2, 0.871) 50%, rgba(100, 43, 2, 0.871) 50%, rgba(100, 43, 2, 0.871) 100%
     );
     border-radius: 10px;
     border: 1px solid black;
-    transform: perspective(500px) rotateY(0deg);
-    box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
-}
-.content .back{
-    display: flex;
-    position: absolute;
-    bottom: 20px;
-    width: 260px;
-    height: 190px;
-    left: 35px;
-    background: linear-gradient(to
-    top, rgb(100, 43, 2) 0%, rgb(100, 43, 2) 50%, rgb(100, 43, 2) 50%, rgb(100, 43, 2) 100%
-    );
-    border-radius: 10px;
-    border: 1px solid black;
-    transform: perspective(500px) rotateY(180deg);
+    width: 250px;
+    height: 350px;
     box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
 }
 
-.content:hover .front{
-    transform: perspective(500px) rotateY(180deg);
+.msg{
+    display: flex;
+    position: relative;
+    left: 30%;
+    background-color: rgba(238, 11, 11, 0.911);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(20px);
+    border-radius: 10px;
+    color: white;
+    width: 600px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
 }
-.content:hover .back{
-    transform: perspective(500px) rotateY(360deg);
-}
+
+
 
 .types{
     display: flex;
@@ -75,10 +45,9 @@
     display: flex;
     position: absolute;
     font-size: 10px;
-    bottom: 59%;
+    bottom: 90%;
     color: rgb(255, 255, 255);
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     margin: 5px;
 }
 .titulo{
@@ -96,6 +65,7 @@
     position: absolute;
     font-size: 20px;
     bottom: 30%;
+    left: 25%;
     color: rgb(255, 255, 255);
     justify-content: center;
     align-items: center;
@@ -105,7 +75,10 @@
 .image{
     display: flex;
     position: relative;
-    width: 103%;
+    width: 99%;
+    height: 50%;
+    left: 5px;
+    top: 10%;
     border-radius: 10px;
     border: 1px solid black;
 }
