--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -4,9 +4,8 @@
     justify-content: space-around;
     align-items: center;
     margin: 0px;
-    background: rgba(106, 46, 1, 0.742);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(20px);
+    background: rgb(106, 47, 1);
+    
     height: 50px;
     box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.389);
 }
@@ -21,13 +20,14 @@
     outline: none;
     border-radius: 5px;
     border: 1px solid black;
-    background-color: rgb(48, 218, 5);
+    background-color: rgb(10, 116, 2);
     color: white;
+    font-family: Heavitas;
 }
 
 .div button:hover{
     background-color: #fffffffa;
-    color: rgb(40, 192, 10);
+    color: rgb(28, 148, 4);
 }
 
 .div button:active{
