--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -1,3 +1,13 @@
+.back_card{
+    background-color: rgba(173, 172, 172, 0.446);
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 5px;
+    outline: none;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(20px);
+}
+
 .boton{
     background-color: rgb(108, 61, 3);
     color: white;
@@ -6,6 +16,7 @@
     margin: 5px;
     outline: none;
 }
+
 
 .div  button:hover{
     background-color: #fffffffa;
