--- a/client/src/views/DetailPage/Detail.module.css
+++ b/client/src/views/DetailPage/Detail.module.css
@@ -9,9 +9,41 @@
     border: 1px solid black;
     width: 900px;
     height: 730px;
-    left: 25px;
+    left: 75px;
     box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
 }
+.boxSteps{
+    display: grid;
+    position: absolute;
+    background-color: #53e106c7;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(20px);
+    border-radius: 20px;
+    margin: 10px;
+    border: 1px solid black;
+    width: 500px;
+    height: 330px;
+    left: 40%;
+    top: 52%;
+   
+}
+.foo{
+    background-color: black;
+    margin-top: 30px;
+    height: 25px;
+  }
+  .H{
+    display: flex;
+    position: relative;
+    color: white;
+    font-size: 12px;
+    top: 7px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  
+  }
+  
 
 .image{
     display: grid;
@@ -21,16 +53,18 @@
     left: 20px;
     width: 405px;
     margin: 5px;
+    border: 1px solid black;
 }
 
 .name{
     display: grid;
     position: absolute;
-    bottom: 680px;
+    bottom: 687px;
     left: 3%;
     justify-content: center;
     align-items: center;
-    margin: 5px;
+    margin: 3px;
+    font-size: 20px;
     font-family: Heavitas;
 }
 
@@ -47,11 +81,11 @@
 .summary{
     display: grid;
     position: absolute;
-    left: 55%;
-    top: 63px;
-    width: 350px;
+    left: 53%;
+    top: 69px;
+    width: 390px;
     margin: 5px;
-    font-size: 12px;
+    font-size: 14px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .Hsummary{
@@ -61,7 +95,7 @@
     top: 43px;
     width: 350px;
     margin: 5px;
-    font-size: 13px;
+    font-size: 20px;
     font-family: Heavitas;
 }
 
@@ -69,11 +103,11 @@
     display: grid;
     position: relative;
     font-family: Heavitas;
-    left: 10px;
+    left: 12px;
     top:357px;
-    width: 150px;
+    width: 270px;
     margin: 5px;
-    font-size: 10px;
+    font-size: 15px;
     justify-content: center;
     background-color: blueviolet;
     border-radius: 3px;
@@ -83,42 +117,45 @@
     display: grid;
     position: relative;
     font-family: Heavitas;
-    right: 85px;
+    right: 18px;
     top:355px;
     width: 330px;
     margin: 5px;
-    font-size: 12px;
+    font-size: 20px;
 }
 
 .paso{
-    display: grid;
+    display: flex;
     position: relative;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    left: 30%;
-    top: 338px;
-    width: 590px;
-    margin: 5px;
-    font-size: 12px;
+    top: 5px;
+    width: 490px;
+    margin: 2px;
+    font-size: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 15px;
 }
 
 .Hpaso{
     display: grid;
     position: absolute;
     font-family: Heavitas;
-    left: 41%;
-    top: 362px;
+    left: 49%;
+    top: 356px;
     width: 330px;
     margin: 5px;
-    font-size: 12px;
+    font-size: 20px;
 }
 .healthScore{
     display: grid;
     position: absolute;
     font-family: Heavitas;
-    right: 83%;
-    top: 46%;
-    margin: 5px;
-    font-size: 12px;
+    right: 74%;
+    top: 96%;
+    margin: 2px;
+    font-size: 20px;
 }
 .div span:hover{
     background-color: #fffffffa;
