--- a/client/src/views/LandingPage/LandingPage.module.css
+++ b/client/src/views/LandingPage/LandingPage.module.css
@@ -1,7 +1,7 @@
 .div{
     display: flex;
     position: absolute;
-    background-color: rgba(132, 64, 9, 0.588);
+    background-color: #ec861a9b;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(20px);
     border: 1px solid black;
