--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -12,13 +12,13 @@
     outline: none;
     border-radius: 5px;
     border: 1px solid black;
-    background-color: rgb(48, 218, 5);
+    background-color: #ec861a;
     color: white;
 }
 
 .div button:hover{
     background-color: #fffffffa;
-    color: rgb(40, 192, 10);
+    color: #ec861a;
 }
 
 .div button:active{
