--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url("https://www.objetivobienestar.com/uploads/s1/21/29/76/6/tipos-de-dietas-vegetarianas-y-sus-beneficios-para-la-salud.webp");
+  background: url("https://img.freepik.com/vector-premium/grafico-diseno-concepto-cartel-banner-verano-exotico-ensalada-comida-vegana-vegetariana-frutas_385073-1108.jpg?w=2000");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
