--- a/client/src/views/DetailPage/Detail.module.css
+++ b/client/src/views/DetailPage/Detail.module.css
@@ -19,14 +19,14 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(20px);
     border-radius: 20px;
-    margin: 10px;
+    margin: 5px;
     border: 1px solid black;
     width: 500px;
     height: 330px;
     left: 40%;
-    top: 52%;
-   
+    top: 52%;   
 }
+
 .foo{
     background-color: black;
     margin-top: 30px;
@@ -52,6 +52,7 @@
     bottom: 395px;
     left: 20px;
     width: 405px;
+    height: 260px;
     margin: 5px;
     border: 1px solid black;
 }
@@ -130,7 +131,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     top: 5px;
     width: 490px;
-    margin: 2px;
+    margin: 1px;
     font-size: 10px;
     justify-content: center;
     align-items: center;
@@ -165,4 +166,20 @@
 .div span:active{
     background-color: rgb(189, 23, 15);
     color: azure;
+}
+.msg{
+    display: flex;
+    position: relative;
+    left: 30%;
+    background-color: rgba(238, 11, 11, 0.911);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(20px);
+    border-radius: 10px;
+    color: white;
+    width: 600px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
 }
