--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -2,7 +2,16 @@
   background-color: black;
   margin-top: 30px;
   height: 25px;
+  bottom: 5px;
 }
+.fooFalla{
+  position: relative;
+  background-color: black;
+  margin-top: 30px;
+  height: 25px;
+  top: 265px;
+}
+
 .H{
   display: flex;
   position: relative;
