--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -1,7 +1,7 @@
 .card_list{
     width: 85vw;
-    margin: 20px auto 0 auto;
+    margin: 20px auto 0 100px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr ;
     grid-gap: 20px;
 }
