--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -8,7 +8,7 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(20px);
     border-radius: 10px;
-    border: 1px solid black;
+    border: 5px solid #e15606;
     width: 230px;
     height: 370px;
     margin: 0;
