--- a/client/src/views/FormPage/Form.module.css
+++ b/client/src/views/FormPage/Form.module.css
@@ -5,6 +5,8 @@
     background-color: #e5cd6e;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(20px);
+    
+    border: 5px solid #e15606;
     margin: 5px;
     margin-top: 10px;
     width: 900px;
