--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -8,8 +8,8 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(20px);
     border-radius: 10px;
-    border: 5px solid #e15606;
-    width: 230px;
+    border: 5px solid #e15606ce;
+    width: 240px;
     height: 370px;
     margin: 0;
     box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.683);
@@ -57,7 +57,7 @@
     display: flex;
     position: absolute;
     font-size: 11px;
-    bottom: 88%;
+    bottom: 90%;
     color: rgb(0, 0, 0);
     justify-content: center;
     align-items: center;
