--- a/client/src/views/DetailPage/Detail.module.css
+++ b/client/src/views/DetailPage/Detail.module.css
@@ -6,13 +6,13 @@
     -webkit-backdrop-filter: blur(20px);
     border-radius: 20px;
     margin: 10px;
-    border: 1px solid black;
+    border: 6px solid rgb(231, 4, 4);
     width: 900px;
     height: 730px;
     left: 75px;
     box-shadow: 3px 3px 3px 3px rgba(14, 14, 14, 0.458);
     padding: 10px;
-    margin-bottom: 10px;
+    
 }
 
 .div1 {
